Fixed the visual bug on mobile

--- a/styles/modules/sections/_navbar.scss
+++ b/styles/modules/sections/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar {
   position: fixed;
   width: 100%;
+  max-width: 100vw;
   display: flex;
   flex-flow: column nowrap;
   color: white;
@@ -40,7 +41,6 @@
 }
 
 .navbar .bar {
-  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
